Fix alignment and sizes on mobile

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,6 @@ main {
     justify-content: center;
     align-items: center;
     height: 100%;
-
 }
 
 .form-group {
@@ -25,6 +24,10 @@ main {
     justify-content: center;
     align-items: center;
     height: 100px;
+}
+
+.smaller {
+    font-size: 0.8rem;
 }
 
 select,
@@ -38,11 +41,12 @@ button {
     padding: 6px 10px;
 }
 
-select:focus, button:focus {
+select:focus,
+button:focus {
     outline: rgb(11, 179, 179) 3px solid;
 }
 
-button:hover {      
+button:hover {
     background-color: black;
     color: white;
     transition: 500ms ease-in-out;
@@ -60,7 +64,7 @@ button:hover {
     padding: 0 10px;
     background-color: white;
     overflow: hidden;
-    cursor:pointer;
+    cursor: pointer;
 }
 
 .highlight {
@@ -70,7 +74,7 @@ button:hover {
 }
 
 .lighter {
-   font-weight: 500;
+    font-weight: 500;
 }
 
 
@@ -105,6 +109,15 @@ button:hover {
 
     to {
         transform: translateY(300%);
+    }
+}
+
+@media screen and (min-width: 800px) {
+
+    main {
+
+        justify-content: center;
+
     }
 }
 
